Fix: #1384 (visible scrollbar in drawer-end animation)

--- a/src/components/unstyled/drawer.css
+++ b/src/components/unstyled/drawer.css
@@ -38,7 +38,7 @@
   }
   &:checked {
     & ~ .drawer-side {
-      @apply overflow-y-auto;
+      @apply overflow-y-auto overflow-x-hidden isolate;
       & > .drawer-overlay {
         @apply visible;
       }
